--- a/es/curriculum.tex
+++ b/es/curriculum.tex
@@ -41,15 +41,15 @@
 
 \section{Productos}
 %AIA
-\cventry{MDAS}{Methodology for development of array schedulers}{El objetivo principal de este proyecto era definir una metodología que consiste en flujos de trabajo y herramientas de desarrollo para apoyar el diseño, implementación, evaluación y despliegue de algoritmos para el ASP. Los objetivos específicos eran proporcionar un flujo de trabajo para los investigadores para que iterativamente puedan desarrollar, depurar, probar y perfilar sus algoritmos, automatizar la mayor cantidad de este flujo de trabajo que sea posible; permitir la reutilización de código mediante la definición de interfaces comunes; reutilizar herramientas de desarrollo, bibliotecas y metodologías; permitir que la exploración de hardware paralelo transparente}{}{}{}
+\cventry{MDAS}{Methodology for development of array schedulers}{El objetivo principal de este proyecto fue definir una metodología que consiste en flujos de trabajo y herramientas de desarrollo para apoyar el diseño, implementación, evaluación y despliegue de algoritmos para el ASP. Los objetivos específicos fueron proporcionar un flujo de trabajo para los investigadores para que iterativamente puedan desarrollar, depurar, probar y perfilar sus algoritmos, automatizar la mayor cantidad de este flujo de trabajo que sea posible; permitir la reutilización de código mediante la definición de interfaces comunes; reutilizar herramientas de desarrollo, bibliotecas y metodologías; permitir que la exploración de hardware paralelo transparente}{}{}{}
 
 \cventry{ASP}{Array Scheduling problem}{Este problema está basado en la planificación de observaciones de ALMA, en donde los recursos son los arreglos de antenas y las tareas son las observaciones, y se busca utilizar de la forma más eficiente los recursos. Para las implementaciones específicas de cada solución se usó un modelo de problema en común}{}{}{}
 
-\cventry{ASPu*}{Array Scheduling using Simulated Annealing, Tabú Search, Evolutive Algorithm}{El objetivo de este proyecto era el estudio del comportamiento de las Heurísticas de Simulated Annealing, Tabú Search y Evolitve Algorithm con el problema de Array Scheduling}{}{}{}
+\cventry{ASPu*}{Array Scheduling using Simulated Annealing, Tabú Search, Evolutive Algorithm}{El objetivo de este proyecto fue el estudio del comportamiento de las Heurísticas de Simulated Annealing, Tabú Search y Evolitve Algorithm con el problema de Array Scheduling}{}{}{}
 
 \cventry{ADSP}{ALMA Dynamic Scheduling Problem Formalization}{Este proyecto buscaba investigar el problema dinámico de programación que se plantea en el proyecto ALMA. ALMA es un proyecto multinacional compuesto por 66 antenas de radiotelescopio, que tienen que ser coordinadas, y su tiempo de las observaciones tienen que ser cuidadosamente planeadas, lo que permite utilizar eficazmente el tiempo disponible para la observación, y para el mantenimiento. El objetivo final de este proyecto es desarrollar y comparar varios algoritmos para este problema}{}{}{}
 
-\cventry{MAWRF}{Metheorogical Analysis base on WRF model}{Debido al interés de conocer cuál era el nivel de lo que tenían en cualquier dirección que una antena se dirigía, el objetivo del proyecto era tener un código de Matlab que hiciera una aproximación numérica con los datos discretos que eran simulados en el Cluster de la Universidad de Valparaíso. Además tener el código de cálculo de la aproximación en cualquier dominio de esta resolución, y en cualquier  que tenga la antena y luego tener el código en un software libre como Octave}{}{}{}
+\cventry{MAWRF}{Metheorogical Analysis base on WRF model}{Debido al interés de conocer cuál era el nivel de lo que tenían en cualquier dirección que una antena se dirigía, el objetivo del proyecto fue tener un código de Matlab que hiciera una aproximación numérica con los datos discretos que eran simulados en el Cluster de la Universidad de Valparaíso. Además tener el código de cálculo de la aproximación en cualquier dominio de esta resolución, y en cualquier  que tenga la antena y luego tener el código en un software libre como Octave}{}{}{}
 
 %gTCS
 \cventry{gTCS}{Generic Telescope Control System Prototype}{En la mayoría de los observatorios, cuando se construye un nuevo telescopio, se debe escribir todo un nuevo sistema de control de telescopio (TCS en inglés). Se podría decir que hay casi un TCS por telescopio del mundo. Es evidente, de todos modos, que algunas secciones del código de cada TCS son bastante similares entre todos ellos, al igual que la transformación de coordenadas. El sistema de control del telescopio genérico (gTCS) pretendía ser un marco de base para el desarrollo y despliegue de la TCS de cualquier telescopio, independiente de su estructura física y el tipo de montaje que presenta}{}{}{}
@@ -65,7 +65,7 @@ Telescope Simulation Environment (TelSE): Los obejtivos de este proyecto eran pr
 
 \cventry{SMCG}{State Machine Code Generetor}{El proyecto buscaba la creación de una máquina de generación de código reusable. La propósito principal es tener una implementación de máquina de estados que permita ejecutar y controlar su lógica}{}{}{}
 
-\cventry{GSME}{Generic State Machine Engine}{El objetivo era implementar un generador de código que permita crear un componente de ACS en Java desde un UML Statecharts Model}{}{}{}
+\cventry{GSME}{Generic State Machine Engine}{El objetivo fue implementar un generador de código que permita crear un componente de ACS en Java desde un UML Statecharts Model}{}{}{}
 
 \cventry{EBE}{Error Browser and Editor}{Interfaz gráfica que permite navegar, estudiar y agregar definiciones (tipos y códigos) en ACS}{}{}{}
 
@@ -78,10 +78,7 @@ Telescope Simulation Environment (TelSE): Los obejtivos de este proyecto eran pr
 
 \cventry{ECSA}{Evaluation of Compilation Systems for ACS}{ACS presenta una complejidad elevada en el uso de archivos de configuración (Makefiles), y provee una API para tres lenguajes de programación oficialmente soportado: C++, Java, Python. Su estructura es muy compleja cuando se quiere añadir o cambiar software y toma grandes tiempos de compilación. El objetivo fue examinar la versión actual de ACS, las posibles mejoras, proponer mejoras o implementar un nuevo sistema de compilación para ACS y comparar las soluciones propuestas con el sistema en ese entonces}{}{}{}
 
-\cventry{ARPA}{Alternative Real- Time Platform for ACS}{Como un framework de control, ACS interactúa con componentes real-time (usualmente sistemas embebidos). Usar ACS en diferentes Real-Time Operative System (RTOS) no es una tarea trivial, ya que cada RTOS tiene sus propias formas de hacer las cosas. La idea principal de este proyecto era configurar un test end-to-end de ejemplos real-time distribuidos, para validar ACS sobre RTOS, o proveer estándares o servicios real-time independientes para ACS}{}{}{}
-
-\section{Docencia y Pregrado}
-\cventry{AstroCouses}{Astronomy related Courses for 2010-2, 2013-1}{Curso electivo del área de sistemas computacionales. En este curso los alumnos aprendían temas fundamentales para comprender astronomía, y cuáles son sus implicancias dentro de la astro-ingeniería, y en particular, informática. El objetivo general de este curso era dar al alumno suficiente conocimiento para saber cuáles son los diversos tipos de telescopios, sistemas computacionales envueltos, y las características de los distintos proyectos de astronomía}{}{}{}
+\cventry{ARPA}{Alternative Real- Time Platform for ACS}{Como un framework de control, ACS interactúa con componentes real-time (usualmente sistemas embebidos). Usar ACS en diferentes Real-Time Operative System (RTOS) no es una tarea trivial, ya que cada RTOS tiene sus propias formas de hacer las cosas. La idea principal de este proyecto fue configurar un test end-to-end de ejemplos real-time distribuidos, para validar ACS sobre RTOS, o proveer estándares o servicios real-time independientes para ACS}{}{}{}
 
 \cventry{TLEGOscope}{Radio TLEGOscope}{Este proyecto fue la continuación de ALS, pero solo de la antena. Se crearon dos modelos a escala más pequeñas, en el orden de 800 piezas cada uno. Además se creó un nuevo software de control más simplificado que no usa ACS}{}{}{}
 
@@ -91,9 +88,12 @@ Telescope Simulation Environment (TelSE): Los obejtivos de este proyecto eran pr
 
 \cventry{LegoFarm}{LegoFarm Project}{LegoFarm Project: BrainStorm a través del producto LegoFarm, entrega un entorno de simulación del movimiento de las antenas del proyecto ALMA a través de kits Lego Mindstorms NXT. Dicho software tiene como objetivo lograr movimientos coordinados de las antenas simuladas. El resultado final de LegoFarm será útil como un ejemplo para los distintos cursos y congresos que están siendo realizados con la idea de enseñar acerca de Sistemas Distribuidos}{}{}{}
 
-\cventry{RPC}{Remote Python Course}{El objetivo del curso para los estudiantes es ser capaces de programar en Python con el fin de utilizar eficazmente la interfaz orientada a objetos de dispositivos de ALMA. El público objetivo son: los ingenieros electrónicos, ingenieros mecánicos, operadores del telescopio del observatorio ALMA}{}{}{}
-
 \cventry{Hevelius}{Hevelius Project}{Hevelius es un sistema de interfaz gráfica de usuario de control del telescopio, diseñado y desarrollado para operar en telescopio amateur. La funcionalidad de control está a cargo de ACS, y el principal objetivo de Hevelius es ser una referencia para el control genérico de Telescopios}{}{}{}
+
+\section{Docencia}
+\cventry{AstroCouses}{Astronomy related Courses for 2010-2, 2013-1}{Curso electivo del área de sistemas computacionales. En este curso los alumnos aprendían temas fundamentales para comprender astronomía, y cuáles son sus implicancias dentro de la astro-ingeniería, y en particular, informática. El objetivo general de este curso es dar al alumno suficiente conocimiento para saber cuáles son los diversos tipos de telescopios, sistemas computacionales envueltos, y las características de los distintos proyectos de astronomía}{}{}{}
+
+\cventry{RPC}{Remote Python Course}{El objetivo del curso para los estudiantes es ser capaces de programar en Python con el fin de utilizar eficazmente la interfaz orientada a objetos de dispositivos de ALMA. El público objetivo son: los ingenieros electrónicos, ingenieros mecánicos, operadores del telescopio del observatorio ALMA}{}{}{}
 
 \nocite{publications}{*}
 \nocite{theses}{*}
