sorting publications, theses and technical reports

--- a/es/curriculum.tex
+++ b/es/curriculum.tex
@@ -20,12 +20,16 @@
 \begin{document}
 \maketitle
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%   PROYECTOS   %%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \section{Proyectos}
-\cventry{FONDEF}{FONDEF D11I1060: Desarrollo de una plataforma astroinformática para la administración y análisis inteligente de datos a gran escala}{La plataforma chilena de astro-informática permitirá la administración y análisis inteligente de datos a gran escala –cerca de 750 gigabytes cada día–, captados por el radiotelescopio Atacama Large Millimeter/submillimeter Array (ALMA), generando información de calidad procesada en Chile y puesta a disposición de la comunidad científica internacional a través de este Observatorio Virtual chileno (ChiVO)}{Colaboración: UTFSM, UCHILE, PUCV, UdeC, USACH, ALMA REUNA}{Resultados: en progreso}{Valparaíso, Santiago}
-\cventry{ALMA-CONICYT}{ALMA-CONICYT \#31080031: Computer Science for ALMA - Strengthening Research and Development within a Chilean University}{El objetivo del proyecto fue reforzar la colaboración entre el proyecto ALMA y la UTFSM, e introducir temas astronómicos dentro de la Universidad y en la comunidad Chilena de computación}{Colaboración: UTFSM, ESO, NRAO, PUC, UV, UCN}{Resultados: ASP, ASPu*}{Valparaíso, Santiago}
-\cventry{ALMA-CONICYT}{ALMA-CONICYT \#31090034: Software development for ALMA: Strengthening development expertise and collaboration networks}{El objetivo fue continuar el desarrollo y la investigación lograda en el pasado proyecto ALMA-CONICYT \#31060008 junto con el mantenimiento, mejoras, y difusión de las experticies generadas}{Colaboración: UTFSM, ESO, UV, UCN, PUCV}{Resultados: pyBACI, GSME, AWP, ECSA}{Valparaíso}
-\cventry{ALMA-CONICYT}{ALMA-CONICYT \#31060008: Software development for ALMA}{Se profundizó la colaboración en el desarrollo del framework de ACS, estableciendo bases sólidas para la transferencia de tecnología entre el equipo ACS y la UTFSM mientras, al mismo tiempo, se preparaban ingenieros de software chilenos}{Colaboración: UTFSM, ALMA, NRAO, ESO}{Productos: gTCS, CSAT, TelSE, SWAT, ACG, SMCG, RAES, AWP, ARPA, AFI, SSG, EBE, H3E}{Valparaíso}
-\cventry{NRAO AUI}{Convenio especial de colaboración científica y técnica entre Associated Universities, INC. y la Univerdidad Técnica Federico Santa María}{Proveer apoyo ténico en las tareas del subsistema Scheduling de Computing Integrated Product Team (CIPT). Estas tareas serán prestadas por personal de nivel académico equivalente a profesores auxiliares o asociados en Ingeniería Informática}{Colaboración: UTFSM, NRAO}{Resultados: ---}{Valparaíso}
+\cventry{FONDEF}{FONDEF D11I1060: Desarrollo de una plataforma astroinformática para la administración y análisis inteligente de datos a gran escala}{La plataforma chilena de astro-informática permitirá la administración y análisis inteligente de datos a gran escala –cerca de 750 gigabytes cada día–, captados por el radiotelescopio Atacama Large Millimeter/submillimeter Array (ALMA), generando información de calidad procesada en Chile y puesta a disposición de la comunidad científica internacional a través de este Observatorio Virtual chileno (ChiVO)}{Colaboración: UTFSM, UCHILE, PUCV, UdeC, USACH, ALMA REUNA}{Productos: en progreso}{Valparaíso, Santiago 2013 - En curso}
+\cventry{ALMA-CONICYT}{ALMA-CONICYT \#31080031: Computer Science for ALMA - Strengthening Research and Development within a Chilean University}{El objetivo del proyecto fue reforzar la colaboración entre el proyecto ALMA y la UTFSM, e introducir temas astronómicos dentro de la Universidad y en la comunidad Chilena de computación}{Colaboración: UTFSM, ESO, NRAO, PUC, UV, UCN}{Productos: ASP, ASPu*}{Valparaíso, Santiago, 2008}
+\cventry{ALMA-CONICYT}{ALMA-CONICYT \#31090034: Software development for ALMA: Strengthening development expertise and collaboration networks}{El objetivo fue continuar el desarrollo y la investigación lograda en el pasado proyecto ALMA-CONICYT \#31060008 junto con el mantenimiento, mejoras, y difusión de las experticies generadas}{Colaboración: UTFSM, ESO, UV, UCN, PUCV}{Productos: pyBACI, GSME, AWP, ECSA}{Valparaíso, 2009}
+\cventry{ALMA-CONICYT}{ALMA-CONICYT \#31060008: Software development for ALMA}{Se profundizó la colaboración en el desarrollo del framework de ACS, estableciendo bases sólidas para la transferencia de tecnología entre el equipo ACS y la UTFSM mientras, al mismo tiempo, se preparaban ingenieros de software chilenos}{Colaboración: UTFSM, ALMA, NRAO, ESO}{Productos: gTCS, CSAT, TelSE, SWAT, ACG, SMCG, RAES, AWP, ARPA, AFI, SSG, EBE, H3E}{Valparaíso, 2006 - 2008}
+\cventry{NRAO AUI}{Convenio especial de colaboración científica y técnica entre Associated Universities, INC. y la Univerdidad Técnica Federico Santa María}{Proveer apoyo ténico en las tareas del subsistema Scheduling de Computing Integrated Product Team (CIPT). Estas tareas serán prestadas por personal de nivel académico equivalente a profesores auxiliares o asociados en Ingeniería Informática}{Colaboración: UTFSM, NRAO}{Productos: Confidenciales}{Valparaíso, 2010}
 
 %\cventry{ChiVO}{Desarrollo de una plataforma astroinformática para la administración y análisis inteligente de datos a gran escala}{La plataforma chilena de astro-informática permitirá la administración y análisis inteligente de datos a gran escala –cerca de 750 gigabytes cada día–, captados por el radiotelescopio Atacama Large Millimeter/submillimeter Array (ALMA), generando información de calidad procesada en Chile y puesta a disposición de la comunidad científica internacional a través de este Observatorio Virtual chileno (ChiVO)}{Financiamiento: FONDEF, ALMA, REUNA}{Resultados: En Progreso}{Valparaíso, Santiago}
 
@@ -38,6 +42,21 @@
 %\cventry{SWAT}{Software development, Analysis and Testing}{Este acrónimo fue utilizado para llamar al equipo de desarrollo y QA, y su objetivo es desarrollar software de calidad, estableciendo estándares de calidad para los procesos de desarrollos y mejorar el equipo de software de ALMA-UTFSM}{Financiamiento: ALMA-CONICYT, ALMA, ESO, NRAO}{Rsultados: SSG, ACG, SMCG, GSME, EBE, H3E, CDBC}{Valparaíso}
 
 %\cventry{RAES}{Repackaging ACS for Embedded Systems}{ALMA Common Software (ACS) es un sistema difícil de implementar en sistemas con recursos limitados y pequeñas dimensiones (sistemas embebidos). El objetivo del proyecto fue ofrecer varias distribuciones de ACS (ACS-UTFSM), implementando un método de compilación alternativo a ACS usando autotools}{Financiamiento: ALMA-CONICYT, ESO}{Resultados: AWP, ECSA, ARPA}{Valparaíso}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%   DOCENCIA    %%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Docencia}
+\cventry{AstroCouses}{Astronomy related Courses for 2010-2, 2013-1}{Curso electivo del área de sistemas computacionales. En este curso los alumnos aprendían temas fundamentales para comprender astronomía, y cuáles son sus implicancias dentro de la astro-ingeniería, y en particular, informática. El objetivo general de este curso es dar al alumno suficiente conocimiento para saber cuáles son los diversos tipos de telescopios, sistemas computacionales envueltos, y las características de los distintos proyectos de astronomía}{}{}{}
+
+\cventry{RPC}{Remote Python Course}{El objetivo del curso para los estudiantes es ser capaces de programar en Python con el fin de utilizar eficazmente la interfaz orientada a objetos de dispositivos de ALMA. El público objetivo son: los ingenieros electrónicos, ingenieros mecánicos, operadores del telescopio del observatorio ALMA}{}{}{}
+
+\cventry{FeriaSW}{Taller de Ingeniería de Software}{En este curso se realizaron varios productos en el marco del equipo LIRAE. El curso consiste en desarrollar un producto de software con un cliente real}{Productos: Hevelius, LegoFARM, ALMA Lego Simulator}{}{}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%   PRODUCTOS   %%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Productos}
 %AIA
@@ -90,22 +109,26 @@ Telescope Simulation Environment (TelSE): Los obejtivos de este proyecto eran pr
 
 \cventry{Hevelius}{Hevelius Project}{Hevelius es un sistema de interfaz gráfica de usuario de control del telescopio, diseñado y desarrollado para operar en telescopio amateur. La funcionalidad de control está a cargo de ACS, y el principal objetivo de Hevelius es ser una referencia para el control genérico de Telescopios}{}{}{}
 
-\section{Docencia}
-\cventry{AstroCouses}{Astronomy related Courses for 2010-2, 2013-1}{Curso electivo del área de sistemas computacionales. En este curso los alumnos aprendían temas fundamentales para comprender astronomía, y cuáles son sus implicancias dentro de la astro-ingeniería, y en particular, informática. El objetivo general de este curso es dar al alumno suficiente conocimiento para saber cuáles son los diversos tipos de telescopios, sistemas computacionales envueltos, y las características de los distintos proyectos de astronomía}{}{}{}
-
-\cventry{RPC}{Remote Python Course}{El objetivo del curso para los estudiantes es ser capaces de programar en Python con el fin de utilizar eficazmente la interfaz orientada a objetos de dispositivos de ALMA. El público objetivo son: los ingenieros electrónicos, ingenieros mecánicos, operadores del telescopio del observatorio ALMA}{}{}{}
-
 \nocite{publications}{*}
 \nocite{theses}{*}
 \nocite{reports}{*}
 
-\bibliographystyle{publications}{alpha}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%   PUBLICACIONES  %%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\bibliographystyle{publications}{unsrt}
 \bibliography{publications}{publications}{Publicaciones}
 
-\bibliographystyle{theses}{alpha}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%   TESIS  %%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\bibliographystyle{theses}{unsrt}
 \bibliography{theses}{theses}{Tesis y Memorias}
 
-\bibliographystyle{reports}{alpha}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%   REPORTES  %%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\bibliographystyle{reports}{unsrt}
 \bibliography{reports}{reports}{Reportes Técnicos}
 
 \end{document}
