solving citations problems

--- a/es/curriculum.tex
+++ b/es/curriculum.tex
@@ -13,7 +13,7 @@
 % personal data
 \firstname{\Huge LIRAE}
 \familyname{}
-\title{\small \textbf{Laboratory of Interdiciplinary Research on Astro-Engineering}}
+\title{\small \textbf{Laboratory of Interdisciplinary Research on Astro-Engineering}}
 \address{}{Valparaíso, Chile}
 \mobile{+56 9 032 432 4562}
 \email{contacto@csrg.cl}
@@ -108,6 +108,8 @@ Telescope Simulation Environment (TelSE): Los obejtivos de este proyecto eran pr
 \cventry{LegoFarm}{LegoFarm Project}{LegoFarm Project: BrainStorm a través del producto LegoFarm, entrega un entorno de simulación del movimiento de las antenas del proyecto ALMA a través de kits Lego Mindstorms NXT. Dicho software tiene como objetivo lograr movimientos coordinados de las antenas simuladas. El resultado final de LegoFarm será útil como un ejemplo para los distintos cursos y congresos que están siendo realizados con la idea de enseñar acerca de Sistemas Distribuidos}{}{}{}
 
 \cventry{Hevelius}{Hevelius Project}{Hevelius es un sistema de interfaz gráfica de usuario de control del telescopio, diseñado y desarrollado para operar en telescopio amateur. La funcionalidad de control está a cargo de ACS, y el principal objetivo de Hevelius es ser una referencia para el control genérico de Telescopios}{}{}{}
+
+\renewcommand*{\bibliographyitemlabel}{[{\arabic{enumiv}}]}
 
 \nocite{publications}{*}
 \nocite{theses}{*}
