--- a/es/curriculum.tex
+++ b/es/curriculum.tex
@@ -31,7 +31,7 @@
 \cventry{ALMA-CONICYT}{ALMA-CONICYT \#31080031: Computer Science for ALMA - Strengthening Research and Development within a Chilean University}{El objetivo del proyecto fue reforzar la colaboración entre el proyecto ALMA y la UTFSM, e introducir temas astronómicos dentro de la Universidad y en la comunidad Chilena de computación}{Colaboración: UTFSM, ESO, NRAO, PUC, UV, UCN}{Productos: ASP, ASPu*}{Valparaíso, Santiago, 2008}
 \cventry{ALMA-CONICYT}{ALMA-CONICYT \#31090034: Software development for ALMA: Strengthening development expertise and collaboration networks}{El objetivo fue continuar el desarrollo y la investigación lograda en el pasado proyecto ALMA-CONICYT \#31060008 junto con el mantenimiento, mejoras, y difusión de las experticies generadas}{Colaboración: UTFSM, ESO, UV, UCN, PUCV}{Productos: pyBACI, GSME, AWP, ECSA}{Valparaíso, 2009}
 \cventry{ALMA-CONICYT}{ALMA-CONICYT \#31060008: Software development for ALMA}{Se profundizó la colaboración en el desarrollo del framework de ACS, estableciendo bases sólidas para la transferencia de tecnología entre el equipo ACS y la UTFSM mientras, al mismo tiempo, se preparaban ingenieros de software chilenos}{Colaboración: UTFSM, ALMA, NRAO, ESO}{Productos: gTCS, CSAT, TelSE, SWAT, ACG, SMCG, RAES, AWP, ARPA, AFI, SSG, EBE, H3E}{Valparaíso, 2006 - 2008}
-\cventry{NRAO AUI}{Convenio especial de colaboración científica y técnica entre Associated Universities, INC. y la Univerdidad Técnica Federico Santa María}{Proveer apoyo ténico en las tareas del subsistema Scheduling de Computing Integrated Product Team (CIPT). Estas tareas serán prestadas por personal de nivel académico equivalente a profesores auxiliares o asociados en Ingeniería Informática}{Colaboración: UTFSM, NRAO}{Productos: Confidenciales}{Valparaíso, 2010}
+\cventry{NRAO AUI}{Convenio especial de colaboración científica y técnica entre Associated Universities, INC. y la Univerdidad Técnica Federico Santa María}{Proveer apoyo ténico en las tareas del subsistema Scheduling de Computing Integrated Product Team (CIPT). Estas tareas fueron prestadas por personal de nivel académico equivalente a profesores auxiliares o asociados en Ingeniería Informática}{Colaboración: UTFSM, NRAO}{Productos: Confidenciales}{Valparaíso, 2010}
 
 %\cventry{ChiVO}{Desarrollo de una plataforma astroinformática para la administración y análisis inteligente de datos a gran escala}{La plataforma chilena de astro-informática permitirá la administración y análisis inteligente de datos a gran escala –cerca de 750 gigabytes cada día–, captados por el radiotelescopio Atacama Large Millimeter/submillimeter Array (ALMA), generando información de calidad procesada en Chile y puesta a disposición de la comunidad científica internacional a través de este Observatorio Virtual chileno (ChiVO)}{Financiamiento: FONDEF, ALMA, REUNA}{Resultados: En Progreso}{Valparaíso, Santiago}
 
