adding theses, and ECOS project

--- a/es/curriculum.tex
+++ b/es/curriculum.tex
@@ -28,6 +28,7 @@
 
 \section{Proyectos}
 \cventry{FONDEF-CONICYT}{FONDEF D11I1060: Desarrollo de una plataforma astroinformática para la administración y análisis inteligente de datos a gran escala}{La plataforma chilena de astro-informática permitirá la administración y análisis inteligente de datos a gran escala –cerca de 750 gigabytes cada día–, captados por el radiotelescopio Atacama Large Millimeter/submillimeter Array (ALMA), generando información de calidad procesada en Chile y puesta a disposición de la comunidad científica internacional a través de este Observatorio Virtual chileno (ChiVO)}{Colaboración: UTFSM, UCHILE, PUCV, UdeC, USACH, ALMA REUNA}{Productos: en progreso}{Valparaíso, Santiago 2013 - En curso}
+\cventry{ECOS-Conicyt}{ECOS-Conicyt: Scheduling in Astronomy}{Considerando que ninguno de los observatorios profesionales ofrece una solución totalmente automatizada para optimizar el uso de las instalaciones astronómicas bajo condiciones cambiantes y dinámicas, en este proyecto se propone el desarrollo de un modelo de scheduling para el problema de scheduling con prioridades dinámicas.}{Colaboración: UTFSM, Université d'Avignon}{Productos: en progreso}{Santiago, 2011 - 2013}
 \cventry{ALMA-CONICYT}{ALMA-CONICYT \#31080031: Computer Science for ALMA - Strengthening Research and Development within a Chilean University}{El objetivo del proyecto fue reforzar la colaboración entre el proyecto ALMA y la UTFSM, e introducir temas astronómicos dentro de la Universidad y en la comunidad Chilena de computación}{Colaboración: UTFSM, ESO, NRAO, PUC, UV, UCN}{Productos: ASP, ASPu*}{Valparaíso, Santiago, 2008}
 \cventry{ALMA-CONICYT}{ALMA-CONICYT \#31090034: Software development for ALMA: Strengthening development expertise and collaboration networks}{El objetivo fue continuar el desarrollo y la investigación lograda en el pasado proyecto ALMA-CONICYT \#31060008 junto con el mantenimiento, mejoras, y difusión de las experticies generadas}{Colaboración: UTFSM, ESO, UV, UCN, PUCV}{Productos: pyBACI, GSME, AWP, ECSA}{Valparaíso, 2009}
 \cventry{ALMA-CONICYT}{ALMA-CONICYT \#31060008: Software development for ALMA}{Se profundizó la colaboración en el desarrollo del framework de ACS, estableciendo bases sólidas para la transferencia de tecnología entre el equipo ACS y la UTFSM mientras, al mismo tiempo, se preparaban ingenieros de software chilenos}{Colaboración: UTFSM, ALMA, NRAO, ESO}{Productos: gTCS, CSAT, TelSE, SWAT, ACG, SMCG, RAES, AWP, ARPA, AFI, SSG, EBE, H3E}{Valparaíso, 2006 - 2008}
