--- a/es/theses.bib
+++ b/es/theses.bib
@@ -32,6 +32,20 @@
   year =	 2008
 }
 
+@Misc{wfarina:_diseno_chivo,
+  title = {Diseño Conceptual de un Observatorio Virtual Astronómico para ALMA},
+  author = {Walter Rodrigo {Fariña Perez}},
+  howpublished = {Tesis para optar al T{\'i} tulo de Ingeniero Civil Inform{\'a}tico, Universidad T{\'e}cnica Federico Santa Mar{\'i}a},
+  year = 2013
+}
+
+@Misc{eantillanca:_algoritmo_paralelo,
+  title = {Un Algoritmo Paralelo para Resolver el Scheduling en Proyectos de Observación Astronómica},
+  author = {Esteban Asaf {Antillanca Vivanco}},
+  howpublished = {Tesis para optar al T{\'i} tulo de Ingeniero Civil Inform{\'a}tico, Universidad T{\'e}cnica Federico Santa Mar{\'i}a},
+  year = 2012
+}
+
 @Misc{ hoffstadt10:_planning_mode_simulator,
   title = {Planning Mode Simulator: A simulation tool for studying ALMA's scheduling behavior},
   author = {Arturo Alejandro {Hoffstadt Urrutia}},
